# lua5.0-swbf2-x64

./: .gitignore  CMakeLists.txt  Makefile.std  README.md  config
etc/: Makefile
include/: lauxlib.h  lua.h
mak.linux/: Makefile  lua50_exe.make  lua50_lib.make  luac50_exe.make
mak.macosx/: Makefile  lua50_dll.make
mak.vs2002/: bin2c50_exe.vcproj  lua50.sln  lua50_dll.vcproj  lua50_exe.vcproj  lua50_lib.vcproj  luac50_exe.vcproj
mak.vs2003/: bin2c50_exe.vcproj  lua50.sln  lua50_dll.vcproj  lua50_exe.vcproj  lua50_lib.vcproj  luac50_exe.vcproj
mak.vs2005/: lua50.sln  lua50_dll.vcproj
mak.vs2019/: bin2c50_exe.vcxproj  lua50.sln  lua50_dll.vcxproj  lua50_dll.vcxproj.filters  lua50_exe.vcproj  lua50_exe.vcxproj  lua50_lib.vcxproj  luac50_exe.vcproj  luac50_exe.vcxproj
mak.vs2022/: bin2c50_exe.vcproj  bin2c50_exe.vcxproj  bin2c50_exe.vcxproj.filters  lua50_dll.vcxproj  lua50_dll.vcxproj.filters  lua50_exe.vcxproj  lua50_exe.vcxproj.filters  lua50_lib.vcproj  lua50_lib.vcxproj  lua50_lib.vcxproj.filters  luac50_exe.vcxproj  luac50_exe.vcxproj.filters
mak.vs6/: bin2c50_exe.dsp  lua50.dsw  lua50_dll.dsp  lua50_exe.dsp  lua50_lib.dsp  luac50_exe.dsp
src/: Makefile  Makefile.std  bin2c.mak  bin2c50_exe.make  config.mak  lapi.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  llimits.h  lobject.c  lobject.h  lstate.h  ltable.c  ltable.h  ltests.c  lua.mak  lua50.def  lua50_dll.make  lua50_exe.make  lua50_lib.make  luac.mak  luac50_exe.make  lundump.c  lvm.c  lvm.h  make_uname.bat  premake.lua
src/lib/: lauxlib.c  lbaselib.c  liolib.c  lmathlib.c  (+2 more)
(+2 files in other folders)
